[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-comtrade"
version = "0.0.0.dev0"
authors = [
  { name="Department for Business and Trade", email="sre@digital.trade.gov.uk" },
]
description = "Python function to ingest data from UN Comtrade's bulk API to PostgreSQL"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/uktrade/pg-comtrade"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.4",
]

[tool.hatch.build]
include = [
  "pg_comtrade.py"
]
